# geom

./: CMakeLists.txt
src/: CMakeLists.txt  polyhedron.cpp  private.h
